Bug 297923 - Make the standalone glue work on mac, and write GRE-finding code which looks for our new XUL framework, and make our new XUL framework. r=jhpedemonte+darin a=chofmann